apps/qbittorrent/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/component
                      operator: In
                      values:
                        - media-server
                topologyKey: kubernetes.io/hostname
              weight: 100
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/component
                      operator: In
                      values:
                        - library-manager
                topologyKey: kubernetes.io/hostname
              weight: 50
      containers:
        - name: qbittorrent
          image: qbittorrent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 6881
              name: bittorrent
            - containerPort: 6881
              name: bittorrent-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads/complete
              subPath: complete
            - name: downloads
              mountPath: /downloads/incomplete
              subPath: incomplete
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
