apps/qbittorrent/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  serviceName: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: qbittorrent
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: qbittorrent
          ports:
            - name: http
              containerPort: 8080
            - name: bittorrent
              containerPort: 6881
              protocol: TCP
            - name: bittorrent-udp
              containerPort: 6881
              protocol: UDP
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 180
          volumeMounts:
            - name: config
              mountPath: /config
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETUID
                - SETGID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
